--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "YOUR_BOT_TOKEN_HERE",
+    "token": "MTQzMzUwMDE4NTg3ODcyODczNA.GG--KL.1SNF86E8rv6WR_eBGUApZVdC51KuFhQzL3Ghqc",
 
     "founder_role": "1438894978230259793",
 
